Speed up picture loading by tweaking how tags are imported from XMP data

No need to copy memory around or use expensive functions to look for
those tags. This patch makes the process of importing tags much faster,
which in the tests I did locally resulted in an overall speed up of 300%
when loading 200 pictures of 5MB each.

https://bugzilla.gnome.org/show_bug.cgi?id=734202